--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,12 +16,10 @@ jobs:
         echo "CREATED=`date -u +"%Y-%m-%dT%H:%M:%SZ"`" >> $GITHUB_ENV
         echo "VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
         echo "VCS_REF=${GITHUB_SHA}" >> $GITHUB_ENV
-    - uses: akhileshns/heroku-deploy@v3.12.12
-      with:
-        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-        heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
-        heroku_email: "iam@jakuboskera.dev"
-        usedocker: true
+    - uses: superfly/flyctl-actions/setup-flyctl@master
+    - run: flyctl deploy --remote-only
+      env:
+        FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
     - name: Set up Docker Buildx
