--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -10,33 +10,36 @@ jobs:
     name: "Pre Release"
     runs-on: "ubuntu-latest"
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Set env vars
       run: |
         echo "CREATED=`date -u +"%Y-%m-%dT%H:%M:%SZ"`" >> $GITHUB_ENV
         echo "VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
         echo "VCS_REF=${GITHUB_SHA}" >> $GITHUB_ENV
     - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
+      uses: docker/setup-qemu-action@v3
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v3
     - name: Login to DockerHub
-      uses: docker/login-action@v1
+      uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build and push
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v5
       with:
         context: .
-        platforms: linux/amd64
+        platforms: linux/amd64,linux/arm64
         push: true
         tags: |
-          jakuboskera/todo:latest
+          jakuboskera/todo:main
+          jakuboskera/todo:sha-${{ github.sha }}
         build-args: |
           CREATED=${{ env.CREATED }}
           VERSION=${{ env.VERSION }}
           VCS_REF=${{ env.VCS_REF }}
+        cache-from: type=registry,ref=jakuboskera/todo:buildcache
+        cache-to: type=registry,ref=jakuboskera/todo:buildcache,mode=max
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
