--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,30 +10,26 @@ jobs:
     name: "Tagged Release"
     runs-on: "ubuntu-latest"
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Set env vars
       run: |
         echo "CREATED=`date -u +"%Y-%m-%dT%H:%M:%SZ"`" >> $GITHUB_ENV
         echo "VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
         echo "VCS_REF=${GITHUB_SHA}" >> $GITHUB_ENV
-    - uses: superfly/flyctl-actions/setup-flyctl@master
-    - run: flyctl deploy --remote-only
-      env:
-        FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
     - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
+      uses: docker/setup-qemu-action@v3
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v3
     - name: Login to DockerHub
-      uses: docker/login-action@v1
+      uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build and push
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v5
       with:
         context: .
-        platforms: linux/amd64
+        platforms: linux/amd64,linux/arm64
         push: true
         tags: |
           jakuboskera/todo:${{ env.VERSION }}
@@ -42,6 +38,12 @@ jobs:
           CREATED=${{ env.CREATED }}
           VERSION=${{ env.VERSION }}
           VCS_REF=${{ env.VCS_REF }}
+        cache-from: type=registry,ref=jakuboskera/todo:buildcache
+        cache-to: type=registry,ref=jakuboskera/todo:buildcache,mode=max
+    - uses: superfly/flyctl-actions/setup-flyctl@master
+    - run: flyctl deploy --image jakuboskera/todo:${{ env.VERSION }}
+      env:
+        FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
